<resources>
    <string name="app_name">LVote Android</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Incorrect username or password</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu">Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="list_of_available_votings">List of available votings</string>
    <string name="create_new_votings">Create new votings</string>
    <string name="manage_groups">Manage groups</string>
    <string name="results_of_finished_votings">Results of finished votings</string>
    <string name="title_activity_available_votings">Available Votings</string>
    <string name="title_activity_manage_groups">Manage Groups</string>
    <string name="your_groups">Your groups:</string>
    <string name="groups_you_belong">Groups you belong:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="users">Users</string>
    <string name="add_group">Add Group</string>
    <string name="title_activity_votings">VotingsActivity</string>
    <string name="available_votings">Available Votings:</string>
    <string name="your_votings">Your Votings:</string>
    <string name="info">Info</string>
    <string name="vote">Vote</string>
    <string name="remove">Remove</string>
    <string name="title_activity_vote">VoteActivity</string>
    <string name="title">Title:</string>
    <string name="error_no_answer">No answer selected</string>
    <string name="result_label">Result:</string>
    <string name="vote_submitted">Vote submitted</string>
    <string name="vote_rejected">Vote rejected!</string>
    <string name="title_activity_results">Results</string>
    <string name="results">Results</string>
    <string name="votings_results">Votings results</string>
    <string name="title_activity_vote_results">VoteResults</string>
    <string name="use_proxy_server_to_send_vote">Use proxy server to send vote</string>
    <string name="send_vote">Send vote</string>
    <string name="send_using_proxy_server">Send using proxy server</string>
    <string name="sign_vote_and_add_to_waiting_list">Sign vote and add to waiting list</string>
    <string name="title_activity_waiting_list">Waiting List</string>
    <string name="send">Send</string>
    <string name="no_votings_selected">No votings selected</string>
    <string name="groups">Groups</string>
    <string name="login">Login</string>
</resources>
