<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.edu.agh.student.mprezes.lvoteandroid.activities.MenuActivity"
    tools:showIn="@layout/app_bar_menu">


    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/list_of_available_votings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/list_of_available_votings"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/create_new_votings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/create_new_votings"
            android:textAllCaps="false"
            android:visibility="gone" />

        <Button
            android:id="@+id/manage_groups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/groups"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/results_of_finished_votings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/votings_results"
            android:textAllCaps="false" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
